# gesture-based-home-automation

./: justfile
Server/: .gitignore  go.mod  go.sum  main.go  servo_config.json
Server/Utils/: Process_management.go  camera_utils.go
Server/constants/: rotation.go
Server/routes/: calibration.go  home.go  rotation.go
StereoCalibration/: calibration.py  triangulation_DLT.py
StereoVision/: stereo_calibration.py  triangulation_DLT.py
app/: Cargo.toml  config.toml
app/src/: camera.rs  error.rs  lib.rs  main.rs  math.rs  traits.rs
app/src/config/: camera.rs  devices.rs  mod.rs
app/src/models/: gesture_recognition.rs  head_detection.rs  hpe.rs  mod.rs
gesture-detection/: main.py
head-detection/: main.py
head-pose-estimation/: .gitignore  app.py  export.py  main.py  model.py  requirements.txt  test_model.py
head-pose-estimation/models/: experimental.py  yolo.py
head-pose-estimation/utils/: datasets.py  general.py  plots.py
picam/: .gitignore  cam.py  take_picture.py
rotator/: Cargo.toml
rotator/src/: lib.rs  main.rs
