[package]
name = "gesture-ease"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.glam]
version = "0.27" # enable fastmath?
features = ["approx"]

[dependencies]
byteorder = "1.5"
error-stack = "0.4"
flume = "0.11"
serde_json = "1.0"
toml = "0.8"
rust-3d = "0.34"
libcamera = "0.2.3"
base64 = "0.22"
rppal = "0.17.0"
